new secret added

--- a/azure-function/node/package.json
+++ b/azure-function/node/package.json
@@ -1,5 +1,7 @@
 {
   "scripts": {
+    "check-quality": "eslint ./ --no-fix --max-warnings 0",
+    "eslintfix" : "eslint ./ --fix",
     "prettier": "prettier --write ./"
   },
   "dependencies": {
